Added code and note

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <div id="app">
           <table id="activityTable">
             <tr>
-              <th>Activity</th>
+              <th id="codeHead">
+                <div class="tooltip">Code
+                  <span class="tooltiptext narrower">Write this code in your ledger to track it</span>
+                </div>
+              </th>
+              <th id='activityHead'>Activity</th>
               <th>
                 <div class='tooltip'>Points
                   <span class="tooltiptext">Earn this many points per 30 minutes</span>
