--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
               </th>
               <th id='activityHead'>Activity</th>
-              <th>
+              <th id="pointsHead">
                 <div class='tooltip'>Points
                   <span class="tooltiptext">Earn this many points per 30 minutes</span>
                 </div>
